turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:4: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to (Int, Int)
    right(51,428571429)
    ^